add validation, new node classes and separate validation and parse logic in separate file

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container-fluid">
     <div class="jumbotron">
-        <div class="col-lg-3">
+        <div class="col-lg-12">
             <div class="row">
                 <div class="input-group">
                     <input type="text" class="form-control" id="expression">
@@ -10,7 +10,7 @@
                         <button class="btn btn-primary" type="button" id="generate">Generate tree</button>
                    </span>
                 </div>
-                <img src="../static/images/" class="img-thumbnail" alt="Responsive image" id="graph-image">
+                <img src="" class="img-thumbnail" alt="Responsive image" id="graph-image">
             </div>
         </div>
     </div>
