--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,17 +1,20 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class="container-fluid">
+<div class="container-fluid top-space">
     <div class="jumbotron">
         <div class="col-lg-12">
-            <div class="row">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="expression">
-                    <span class="input-group-btn">
-                        <button class="btn btn-primary" type="button" id="generate">Generate tree</button>
-                   </span>
-                </div>
+            <div class="input-group">
+                <input type="text" class="form-control" id="expression">
+                <span class="input-group-btn">
+                    <button class="btn btn-primary" type="button" id="generate">Generate tree</button>
+               </span>
+            </div>
+        </div>
+        <div class="row top-space">
+            <div class="col-lg-6">
                 <img src="" class="img-thumbnail" alt="Responsive image" id="graph-image">
             </div>
+            <div class="col-lg-6" id="truth-table"></div>
         </div>
     </div>
 </div>
