--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,17 +5,19 @@
         <div class="col-lg-12">
             <div class="input-group">
                 <input type="text" class="form-control" id="expression">
-                <span class="input-group-btn">
+                <div class="input-group-btn">
                     <button class="btn btn-primary" type="button" id="generate">Generate tree</button>
-               </span>
+                </div>
             </div>
         </div>
         <div class="row top-space">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <img src="" class="img-thumbnail" alt="Responsive image" id="graph-image">
             </div>
-            <div class="col-lg-6" id="truth-table"></div>
         </div>
+        <!--<div class="row top-space">-->
+            <div class="col-lg-12 top-space" id="truth-table"></div>
+        <!--</div>-->
     </div>
 </div>
 {% endblock %}
