--- a/src/templates/table.html
+++ b/src/templates/table.html
@@ -1,19 +1,22 @@
-<h4>Identification: {{identification}}</h4>
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            {% for item in table[0] %}
-                <th class="text-center" scope="col">{{item}}</th>
-            {% endfor %}
-        </tr>
-    </thead>
-    <tbody>
-        {% for row in table[1:] %}
+<div class="col-lg-12"><p>Identification: {{identification}}</p></div>
+<div class="row">
+    <table class="table table-striped table-dark">
+        <thead>
             <tr>
-                {% for item in row %}
-                    <td class="text-center">{{item}}</td>
+                {% for item in table[0] %}
+                    <th scope="col">{{item}}</th>
                 {% endfor %}
             </tr>
-        {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            {% for row in table[1:] %}
+                <tr>
+                    {% for item in row %}
+                        <td class="text-center">{{item}}</td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
