--- a/src/templates/table.html
+++ b/src/templates/table.html
@@ -1,10 +1,13 @@
-<div class="col-lg-12"><p>Identification: {{identification}}</p></div>
+<div class="col-lg-12 text-center">
+    <h4>Identification:</h4>
+    <p>{{identification}}</p>
+</div>
 <div class="row">
     <table class="table table-striped table-dark">
         <thead>
             <tr>
                 {% for item in table[0] %}
-                    <th scope="col">{{item}}</th>
+                    <th class="text-center" scope="col">{{item}}</th>
                 {% endfor %}
             </tr>
         </thead>
