--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,22 +1,28 @@
 {% extends "layout.html" %}
 {% block body %}
+    <!--<div class="col-lg-12">-->
+    <!--<div class="input-group">-->
+    <!--<input type="text" class="form-control" id="expression">-->
+    <!--<div class="input-group-btn">-->
+    <!--<button class="btn btn-primary" type="button" id="generate">Generate tree</button>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <nav class="navbar navbar-light bg-light w-100">
+        <form class="form-inline w-100 p-3 d-flex justify-content-center">
+            <input class="form-control mr-sm-2 w-75" type="text" id="expression" placeholder="&(A,|(B,~(=(C,D)))" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="button" id="generate">Generate</button>
+        </form>
+    </nav>
 <div class="container-fluid top-space">
     <div class="jumbotron">
-        <div class="col-lg-12">
-            <div class="input-group">
-                <input type="text" class="form-control" id="expression">
-                <div class="input-group-btn">
-                    <button class="btn btn-primary" type="button" id="generate">Generate tree</button>
-                </div>
-            </div>
-        </div>
         <div class="row top-space">
             <div class="col-lg-12">
                 <img src="" class="img-thumbnail" alt="Responsive image" id="graph-image">
             </div>
         </div>
         <!--<div class="row top-space">-->
-            <div class="col-lg-12 top-space" id="truth-table"></div>
+        <div class="col-lg-12 top-space" id="truth-table"></div>
         <!--</div>-->
     </div>
 </div>
