--- a/src/templates/table.html
+++ b/src/templates/table.html
@@ -1,24 +1,32 @@
-<div class="col-lg-12 text-center">
-    <h4>Identification:</h4>
-    <p>{{identification}}</p>
+<div class="row">
+    <div class="col-lg-12 text-center">
+        <h4>Identification:</h4>
+        <p>{{identification}}</p>
+    </div>
 </div>
 <div class="row">
-    <table class="table table-striped table-dark">
+    <div class="col-lg-12 text-center">
+        <h4>Normalization:</h4>
+        <p>{{normalization}}</p>
+    </div>
+</div>
+<div class="row">
+    <table class="table table-striped">
         <thead>
-            <tr>
-                {% for item in table[0] %}
-                    <th class="text-center" scope="col">{{item}}</th>
-                {% endfor %}
-            </tr>
+        <tr>
+            {% for item in table[0] %}
+            <th class="text-center" scope="col">{{item}}</th>
+            {% endfor %}
+        </tr>
         </thead>
         <tbody>
-            {% for row in table[1:] %}
-                <tr>
-                    {% for item in row %}
-                        <td class="text-center">{{item}}</td>
-                    {% endfor %}
-                </tr>
+        {% for row in table[1:] %}
+        <tr>
+            {% for item in row %}
+            <td class="text-center">{{item}}</td>
             {% endfor %}
+        </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
