add nand to frontend

--- a/src/templates/table.html
+++ b/src/templates/table.html
@@ -11,6 +11,12 @@
     </div>
 </div>
 <div class="row">
+    <div class="col-lg-12 text-center">
+        <h4>NAND:</h4>
+        <p>{{nand}}</p>
+    </div>
+</div>
+<div class="row">
     <table class="table table-striped">
         <thead>
         <tr>
